bookings alignment fixed

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -12,7 +12,8 @@
 }
 .message-name {
   padding-left: 10px;
-  min-width: 100px;
+  min-width: 150px;
+  max-width: 150px;
 }
 .message-name h3 {
   font-size: 13px;
